# corobatch

./: .gitignore  CMakeLists.txt  README.md  compile  corobatch.hpp  corobatch.m.cpp  main.m.cpp  make_singlefile
comparison/: CMakeLists.txt  common.cpp  common.hpp  corobatching.cpp  handbatching.cpp  nobatching.cpp
corobatch/benchmark/: CMakeLists.txt  README.md
corobatch/benchmark/multiply_add/: CMakeLists.txt  README.md  benchmark_multiply_add.cpp
corobatch/benchmark/remote_call/: CMakeLists.txt  benchmark_remote_call.cpp
corobatch/examples/: CMakeLists.txt
corobatch/examples/asio/: CMakeLists.txt  README.md  client.cpp  communicate.hpp  server.cpp
corobatch/include/corobatch/: accumulate.hpp  batch.hpp  batcher.hpp  corobatch copy.hpp  corobatch.hpp  executor.hpp  logging.hpp  task.hpp  translation_unit.cpp  vectorbatching.hpp
corobatch/include/corobatch/private_/: log.hpp  logging.cpp
corobatch/include/corobatch/utility/: allocator.hpp  executor.hpp
include/: corobatch.hpp
